--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -4,7 +4,7 @@
   min-height: 100vh;
   display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   user-select: none;
   overflow: hidden;
   z-index: 2;
@@ -15,14 +15,15 @@
   flex-direction: row;
   align-items: center;
   width: 100%;
-  padding-left: 200px;
+  //padding-left: 200px;
   position: relative;
   z-index: 1;
+  
 
   @media screen and (max-width: 900px) {
     flex-direction: column;
     text-align: center;
-    padding-left: 10px;
+    
   }
 
   @media screen and (max-width: 450px) {
