--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -1,3 +1,5 @@
+
+
 .app__navbar {
     user-select: none;
     position: fixed;
@@ -5,14 +7,13 @@
     z-index: 10;
     display: flex;
     align-items: center;
-
 }
 
 .app__navbar-all {
     display: flex;
     justify-content: space-between;
-    align-items: center;  
-    width: 100%;    
+    align-items: center;
+    width: 100%;
     position: relative;
 }
 
@@ -23,8 +24,6 @@
     cursor: pointer;
     
     a {
-        display: flex;
-        align-items: center;
         text-decoration: none;
         font-size: 2rem;
         font-weight: 700;
@@ -38,26 +37,23 @@
             color: var(--secondary-color);
         }
     }
-    
 }
 
 @media screen and (max-width: 900px) {
     .app__navbar-logo 
-        a {
-            font-size: 1.5rem;
-            margin: 1rem 1rem;            
-        }
+    a {
+        font-size: 1.5rem;
+        margin: 1.5rem 1.5rem;
+        line-height: 25px; 
+    }
 }
 
 @media screen and (max-width: 450px) {
-    .app__navbar-logo {
-        justify-content: flex-start;
-        
-        a {
-            font-size: 1rem;
-            margin: 0.7rem 0.7rem;
-            line-height: 15px;
-        }
+    .app__navbar-logo 
+    a {
+        font-size: 1rem;
+        margin: 1.2rem 1.2rem;
+        line-height: 17px;
     }
 }
 
@@ -65,7 +61,7 @@
     display: flex;
     align-items: center;
     list-style: none;
-    margin-right: 4rem;
+    margin-right: 5rem;
 
     li {
         margin-left: 60px;
@@ -82,8 +78,8 @@
             &:hover {
                 color: var(--secondary-color);
             }
-
         }
+
         a.active {
             position: relative;
             
@@ -95,94 +91,123 @@
                 width: 100%;
                 height: 1.4px; 
                 background-color: var(--lightGray-color);
-                
                 transform: scaleX(1);
             }
         }
     }
+    
+}
 
-    @media screen and (max-width: 1080px) {
+@media screen and (max-width: 1080px) {
+    .app__navbar-links {
+        display: none;
+    }
+}
+
+.app__navbar-menu-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    cursor: pointer;
+    height: 50px;
+    width: 60px;
+
+    svg {
+        width: 70%;
+        height: 70%;
+        color: var(--lightGray-color);
+        transition: color 0.3s ease-in-out;
+
+        &:hover {
+            color: var(--secondary-color);
+        }
+
+        @media screen and (max-width: 900px) {
+            width: 45px;
+            height: 45px;
+            padding-right: 10px;             
+        }
+        
+        @media screen and (max-width: 450px) {            
+            width: 30px;
+            padding-right: 0px; 
+        }
+    }
+    @media screen and (min-width: 1080px) {
         display: none;
     }
 }
 
 .app__navbar-menu {
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    right: 0;
+    z-index: 1000;
+    padding: 1rem;
+    width: 100%;
+    height: 100vh;
     display: flex;
-    align-items: center;
-    justify-content: center;
-    position: relative;
-    height: 40px;
-    width: 40px;
+    flex-direction: column;
+    align-items: flex-end;
+    background: rgba(1, 1, 1, 0.85);
+}
 
+.app__navbar-menu-close {
+    margin: 1rem;
+    cursor: pointer;
 
     svg {
-        width: 80%;
-        height: 80%;
+        width: 40px;
+        height: 40px;
         color: var(--secondary-color);
-        
+        transition: color 0.3s ease-in-out;
+
         &:hover {
-            color: var(--hover-color); 
+            color: var(--hover-color);
+        }
+
+        @media screen and (max-width: 900px) {
+            width: 45px;
+            height: 45px; 
+        }
+        
+        @media screen and (max-width: 450px) {
+            width: 35px;
+            height: 35px;
+            
         }
     }
+}
 
-    div {
-        cursor: pointer;
-        position: fixed;
-        top: 0;
-        bottom: 0;
-        right: 0;
-        z-index: 5;
-        padding: 1rem;
-        width: 100%;
-        height: 100vh;
-        display: flex;
-        align-items: center;
-        justify-content: flex-start;
-        align-items: flex-end;
-        flex-direction: column;
-        background: rgba(1, 1, 1, 0.822);
+.app__navbar-menu ul {
+    list-style: none;
+    margin: auto 0;
+    padding: 0;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
-        svg {
-            width: 40px;
-            height: 40px;
+    li {
+        margin-bottom: 2.5rem;
+
+        a {
             color: var(--secondary-color);
-            margin: 0.5rem 0.5rem;
-            margin-bottom: 2rem;
-        }
+            text-decoration: none;
+            font-size: 2rem;
+            font-weight: 400;
+            transition: all 0.3s ease-in-out;
 
-        ul {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            width: 100%;
-            display: flex;
-            align-items: center;
-            flex-direction: column;
+            &:hover {
+                color: var(--hover-color);
+            }
 
-            li {
-                margin-bottom: 2.5rem;
-                margin-left: 3rem;
-
-                a {
-                    color: var(--secondary-color);
-                    text-decoration: none;
-                    font-size: 20px;
-                    font-weight: 400;
-                    transition: all 0.3s ease-in-out;
-        
-                    &:hover {
-                        color: var(--hover-color);
-                    }
-        
-                }
+            @media screen and (max-width: 450px) {
+                font-size: 1.5rem;
+             
             }
         }
-        @media  screen and (min-width: 1080px) {
-            display: none;
-        }
     }
-    @media  screen and (min-width: 1080px) {
-        display: none;
-    }
+    
 }
