--- a/src/components/About/About.scss
+++ b/src/components/About/About.scss
@@ -1,41 +1,31 @@
-.app__About {
+.about {
     position: relative;
     width: 100%;
     min-height: 100vh;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     user-select: none;
     overflow: hidden;
-    z-index: 2;
-}
-
-.app__About-info {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-    min-height: 100vh;
-    z-index: 2;
-    justify-content: center;
     padding-top: 10rem;
+    z-index: 2;
 
     @media screen and (max-width: 900px) {
-        padding-left: 1rem;
+        padding-top: 5rem;
     }
 
     @media screen and (max-width: 450px) {
-        padding-left: 1.5rem;
         padding-top: 4rem;
     }
 }
 
-.app__About-title {
+.about__title {
     font-size: 1rem;
     font-weight: 600;
     color: var(--lightGray-color);
     margin-bottom: 50px;
     padding-left: 200px;
-    
 
     @media screen and (max-width: 900px) {
         padding-left: 1rem;
@@ -44,53 +34,55 @@
     @media screen and (max-width: 450px) {
         font-size: 0.6rem;
         margin-bottom: 15px;
+        padding-left: 0;
     }
 }
 
-.app__About-desc-container-text {
-    align-items: center;
+.about__content {
+    max-width: 600px;
+    text-align: left;
     line-height: 3rem;
     font-size: 2rem;
     font-weight: 700;
-    max-width: 600px;
     color: var(--secondary-color);
-
-    @media screen and (max-width: 900px) {
-        
-    }
 
     @media screen and (max-width: 450px) {
         font-size: 1.3rem;
         line-height: 2rem;
-        max-width: 100%;
         padding-right: 15px;
-    }
-
-    &-secondary {
-        padding-top: 2rem;
-        line-height: 2rem;
-        font-size: 1rem;
-        font-weight: 600;
-        max-width: 600px;
-        color: var(--lightGray-color);
+        padding-left: 15px;
     }
 }
 
-.app__About-desc-container-icons {
+.about__text-secondary {
+    display: block;
+    padding-top: 2rem;
+    line-height: 2rem;
+    font-size: 1rem;
+    font-weight: 600;
+    color: var(--lightGray-color);
+}
+
+.about__icons {
     margin-top: 50px;
+    display: flex;
+    gap: 20px;
 
-    a {
-        margin-right: 20px;
-        font-size: 27px;
-        color: var(--lightGray-color);
+    @media screen and (max-width: 450px) {
+        gap: 15px;
+    }
+}
 
-        &:hover {
-            color: var(--secondary-color);
-        }
+.about__icon {
+    font-size: 27px;
+    color: var(--lightGray-color);
+    transition: color 0.3s ease-in-out;
 
-        @media screen and (max-width: 450px) {
-            margin-right: 15px;
-            font-size: 23px;
-        }
+    &:hover {
+        color: var(--secondary-color);
+    }
+
+    @media screen and (max-width: 450px) {
+        font-size: 23px;
     }
 }
