--- a/src/components/Works/Works.scss
+++ b/src/components/Works/Works.scss
@@ -1,14 +1,13 @@
 .app__Work {
   position: relative;
   width: 100%;
-  min-height: 100vh;  
+  min-height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   overflow: hidden;
   flex-direction: column;
   user-select: none;
-
 }
 
 .app__Work-info {
@@ -22,28 +21,27 @@
 }
 
 .app__Work-title {
-    position: relative;
-    font-size: 1rem;
-    font-weight: 600;
-    color: var(--lightGray-color);
-    margin-bottom: 100px;
-    padding-top: 7rem;
-    padding-left: 200px;
-    z-index: 3;
+  position: relative;
+  font-size: 1rem;
+  font-weight: 600;
+  color: var(--lightGray-color);
+  margin-bottom: 100px;
+  padding-top: 7rem;
+  padding-left: 200px;
+  z-index: 3;
 
-    @media screen and (max-width: 900px) {
-        padding-left: 3rem;
-        font-size: 0.8rem;
-    }
+  @media screen and (max-width: 900px) {
+    padding-left: 3rem;
+    font-size: 0.8rem;
+  }
 
-    @media screen and (max-width: 450px) {
-        padding-left: 1.2rem;
-        padding-top: 8rem;
-        font-size: 0.6rem;
-        margin-bottom: 15px;
-    }
+  @media screen and (max-width: 450px) {
+    padding-left: 1.2rem;
+    padding-top: 8rem;
+    font-size: 0.6rem;
+    margin-bottom: 15px;
+  }
 }
-
 
 .app__Work-cards-container {
   display: flex;
@@ -55,21 +53,50 @@
   padding-bottom: 8rem;
 }
 
-.app__Work-card {
-  cursor: pointer;
+/* Wrapper to handle borders */
+.app__Work-card-wrapper {
+  width: 100%;
   position: relative;
+  text-decoration: none;
+  overflow: hidden;
+  transition: all 0.3s ease-in-out;
+
+  &:first-child {
+    border-top: 1px solid var(--darkGray-color);
+  }
+
+  &:not(:last-child) {
+    border-bottom: 1px solid var(--darkGray-color);
+  }
+}
+
+.app__Work-card {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-decoration: none;
   width: 100%;
   height: 250px;
-  object-fit: cover;
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
-  overflow: hidden;
-  border-top:  1px solid var(--darkGray-color);
-  border-bottom:  1px solid var(--darkGray-color);
-  transition: transform 2s cubic-bezier(0.25, 1, 0.5, 1);
-  z-index: 2;
-  margin: 20px
+  cursor: pointer;
+  transition: transform 0.3s ease-in-out;
+
+  &:hover {
+    transform: scale(1.03);
+  }
+}
+
+/* Background effect on hover */
+.card-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0;
+  transition: opacity 0.4s ease-in-out;
 }
 
 .card-title {
@@ -77,6 +104,8 @@
   font-weight: 700;
   color: var(--lightGray-color);
   margin-left: 200px;
+  position: relative;
+  z-index: 2;
 
   @media screen and (max-width: 450px) {
     font-size: 2rem;
@@ -84,22 +113,18 @@
   }
 }
 
-.card-description{
+.card-description {
   margin-left: 200px;
   color: var(--lightGray-color);
+  position: relative;
+  z-index: 2;
 
   @media screen and (max-width: 450px) {
     margin-left: 1.5rem;
   }
 }
 
-.app__Work-card:hover .card-title {
-  content: url('../../assets/card_2hover.png');
-  transform: scale(1.06);
-  z-index: 3;
-  
-}
-
+/* Background Image */
 .app__Work-background {
   position: absolute;
   top: 0;
