--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,4 +1,12 @@
-.app__Footer {
+.app__Footer{
+  position: relative; 
+    width: 100%;
+    user-select: none;
+    background-color: var(--background2-color);
+    z-index: 2; 
+}
+
+.app__footer-content {
     position: relative;
     text-align: center;
     justify-content: space-between;
@@ -24,7 +32,7 @@
   background-color: var(--darkGray-color);
 }
 
-.app__footer--content {
+.app__footer-left-content {
     align-items: center;
     display: flex;
     justify-content: space-between;
