--- a/src/components/Works/Works.scss
+++ b/src/components/Works/Works.scss
@@ -5,9 +5,24 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  overflow: hidden;
   flex-direction: column;
   user-select: none;
+  overflow: hidden;
+  padding-bottom: 4rem;
+}
+
+.app__Work-background {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 150%;
+  background-image: url('../../assets/work_background.png'); 
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 1;
+  z-index: 1;
 }
 
 .app__Work-info {
@@ -15,9 +30,8 @@
   min-height: 100vh;
   flex-direction: column;
   justify-content: center;
-  margin-bottom: 0px;
-  padding-bottom: 0px;
   z-index: 3;
+  position: relative;
 }
 
 .app__Work-title {
@@ -45,29 +59,23 @@
 
 .app__Work-cards-container {
   display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  margin: 0 auto;
+  flex-direction: column;
   width: 100%;
   z-index: 3;
-  padding-bottom: 8rem;
 }
 
-/* Wrapper to handle borders */
+.app__Work-card-wrapper:first-child {
+  border-top: 1px solid var(--darkGray-color);
+}
+
 .app__Work-card-wrapper {
-  width: 100%;
-  position: relative;
+  border-bottom: 1px solid var(--darkGray-color);
   text-decoration: none;
-  overflow: hidden;
-  transition: all 0.3s ease-in-out;
+}
 
-  &:first-child {
-    border-top: 1px solid var(--darkGray-color);
-  }
-
-  &:not(:last-child) {
-    border-bottom: 1px solid var(--darkGray-color);
-  }
+.app__Work-card-wrapper:last-child {
+  border-bottom: 1px solid var(--darkGray-color);
+  margin-bottom: 2rem; 
 }
 
 .app__Work-card {
@@ -78,34 +86,43 @@
   width: 100%;
   height: 250px;
   cursor: pointer;
-  transition: transform 0.3s ease-in-out;
-
-  &:hover {
-    transform: scale(1.03);
-  }
+  position: relative;
+  overflow: hidden;
 }
 
-/* Background effect on hover */
 .card-background {
   position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
+  top: 50%;
+  left: 50%;
+  width: 0;
+  height: 0;
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   opacity: 0;
-  transition: opacity 0.4s ease-in-out;
+  transition: width 1s cubic-bezier(0.22, 1, 0.36, 1), 
+              height 1s cubic-bezier(0.22, 1, 0.36, 1),
+              opacity 0.5s ease-in-out;
+  transform: translate(-50%, -50%);
+}
+
+.app__Work-card:hover .card-background {
+  opacity: 1;
+  width: 100%;
+  height: 100%;
+}
+
+.card-title, .card-description {
+  position: relative;
+  z-index: 2;
+  color: var(--secondary-color);
+  transition: none;
 }
 
 .card-title {
-  font-size: 3rem;
+  font-size: 4rem;
   font-weight: 700;
-  color: var(--lightGray-color);
   margin-left: 200px;
-  position: relative;
-  z-index: 2;
 
   @media screen and (max-width: 450px) {
     font-size: 2rem;
@@ -115,26 +132,8 @@
 
 .card-description {
   margin-left: 200px;
-  color: var(--lightGray-color);
-  position: relative;
-  z-index: 2;
 
   @media screen and (max-width: 450px) {
     margin-left: 1.5rem;
   }
-}
-
-/* Background Image */
-.app__Work-background {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 150%;
-  background-image: url('../../assets/work_background.png');
-  background-size: cover;
-  background-position: center;
-  background-repeat: no-repeat;
-  opacity: 1;
-  z-index: 1;
 }
