--- a/src/components/Work_pages/Work_1.scss
+++ b/src/components/Work_pages/Work_1.scss
@@ -1,3 +1,30 @@
+.app__work1{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+
+    @media screen and (max-width: 900px) {
+      padding-left: 3rem;
+      font-size: 0.8rem;
+    }
+
+    @media screen and (max-width: 450px) {
+      font-size: 0.6rem;
+      margin-bottom: 35px;
+      margin-top: 80px;
+      padding-left: 1.2rem;
+    }
+}
+
+.app__work1-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: 200px;
+}
+
 .h1{
     font-size: 2.5rem;
     font-weight: 700;
