--- a/src/components/Work_pages/Work_1.scss
+++ b/src/components/Work_pages/Work_1.scss
@@ -5,15 +5,11 @@
     justify-content: space-evenly;
 
     @media screen and (max-width: 900px) {
-      padding-left: 3rem;
-      font-size: 0.8rem;
+      
     }
 
     @media screen and (max-width: 450px) {
-      font-size: 0.6rem;
-      margin-bottom: 35px;
-      margin-top: 80px;
-      padding-left: 1.2rem;
+      font-size: 0.9rem;
     }
 }
 
@@ -23,24 +19,26 @@
     align-items: center;
     justify-content: space-evenly;
     margin-top: 200px;
+    color: var(--green-color);
+    
+    &-title{
+        font-size: 2.5rem;
+        font-weight: 700;
+        margin-bottom: 1.5rem;
+        color: var(--green-color);
+        text-align: center;
+        text-transform: uppercase;
+        letter-spacing: 0.1rem;
+        font-family: 'Montserrat', sans-serif;
+    }
+    
+    &-description{
+        font-size: 1.2rem;
+        font-weight: 400;
+        color: #000;
+        text-align: center;
+        margin-bottom: 2rem;
+        font-family: 'Montserrat', sans-serif;
+    }
 }
 
-.h1{
-    font-size: 2.5rem;
-    font-weight: 700;
-    margin-bottom: 1.5rem;
-    color: #000;
-    text-align: center;
-    text-transform: uppercase;
-    letter-spacing: 0.1rem;
-    font-family: 'Montserrat', sans-serif;
-}
-
-.p{
-    font-size: 1.2rem;
-    font-weight: 400;
-    color: #000;
-    text-align: center;
-    margin-bottom: 2rem;
-    font-family: 'Montserrat', sans-serif;
-}
